# AnEngine

./: .gitignore  .gitmodules  AEngine.sln  AnEngine.sln  CMakeLists.txt  CMakeSettings.json  readme.md  readme_en.md
AEngine/: AEngine.vcxproj  AEngine.vcxproj.filters  BaseBehaviour.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  ComponentBehaviour.cpp  ComponentBehaviour.h  DTimer.cpp  DTimer.h  DX.cpp  DX.h  DX.hpp  DebugLog.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorHeap.cpp  DescriptorHeap.h  DescriptorHeap.hpp  DrawCube.cpp  DrawCube.h  DrawLine.cpp  DrawLine.h  Driver.cpp  Driver.h  DynamicConstantBuffer.cpp  DynamicConstantBuffer.h  ExecuteIndirect.cpp  ExecuteIndirect.h  Fence.cpp  Fence.h  (+56 more)
AWindow/: AWindow.vcxproj  AWindow.vcxproj.filters  WinMain.cpp  onwind.h
AnEngine/: AllocatorBase.h  AnEngine.vcxproj  AnEngine.vcxproj.filters  Archetype.h  ArchetypeManager.h  AssetsConfig.h  AssetsDatabase.cpp  AssetsDatabase.h  BaseBehaviour.h  BehaviourSystem.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Chunk.cpp  Chunk.h  ChunkAllocator.cpp  ChunkAllocator.h  Color.cpp  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandQueue.h  CommonState.h  Component.h  ComponentBase.h  ComponentBehaviour.cpp  ComponentBehaviour.h  ComponentData.h  ComponentGroup.h  ComponentGroup.hpp  ComputeUnit.cpp  ComputeUnit.h  DMath.hpp  DTimer.cpp  DTimer.h  (+153 more)
AnEngine.Test/: AnEngine.Test.vcxproj  AnEngine.Test.vcxproj.filters  FbxImporter.Test.cpp  Promise.test.cpp  TestMain.cpp  vector.test.cpp
Assets/: SquidRoom.h  readme.md  test.hlsl  test.hlsli
Assets/CompiledShaders/: Raytracing.hlsl.h
Blogs/: blog1.md  blog2.md  blog3.md  跨DLL单例模板.md
Documents/: Roadmap.md
Source/AnEngine/: ALogger.h  AllocatorBase.h  AnEngine.vcxproj  AnEngine.vcxproj.filters  Archetype.cpp  Archetype.h  ArchetypeManager.h  AssetsConfig.h  AssetsDatabase.cpp  BaseBehaviour.h  BaseRenderer.h  CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Chunk.cpp  Chunk.h  ChunkAllocator.h  Color.cpp  Color.h  ColorBuffer.cpp  CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandList.h  CommandListPool.h  CommandQueue.cpp  CommandQueue.h  CommonState.cpp  Component.h  ComponentGroup.hpp  ComputeUnit.cpp  DMath.hpp  DTimer.h  DX.cpp  DebugLog.cpp  DebugLog.h  DeferredRenderPipeline.cpp  Delegate.hpp  DepthBuffer.cpp  (+82 more)
Source/AnEngine.Interface/: CMakeLists.txt
Source/AnEngine.Interface/Graphics/: ICommandList.hpp
Source/AnEngine.Interface/Rendering/: ICommandList.hpp  ICommandQueue.hpp
Source/AnEngine.OutputTarget/Window/: CMakeLists.txt
Source/AnEngine.PlatformDependence/: CmakeLists.txt
Source/AnEngine.PlatformDependence/Windows/DirectX/: CommandList.h  Utility.hpp
Source/AnEngine.PlatformDependence/Windows/Obsolate/: DX.h  DrawCube.h  ExecuteIndirect.cpp  ExecuteIndirect.h  NBody.h
Source/AnEngine.Test/: AnEngine.Test.vcxproj  FbxImporter.Test.cpp  main.cpp
Source/AnEngine/Common/Graph/: DAGGraph.hpp  GraphVertex.hpp
Source/AnEngine/ECS/: DAGScheduler.h  ISchedule.hpp
Source/AnEngine/ECS/Component/: IComponent.hpp  Parameter.hpp
Source/AnEngine/ECS/Entity/: Entity.hpp
Source/AnEngine/ECS/System/: SystemBase.hpp  SystemType.h
Source/AnEngine/Graphics/: CommandContext.cpp  CommandContext.h  CommandList.cpp  CommandListPool.h  CommandQueue.h
Source/AnEngine/Interface/Rendering/: ICommandList.hpp  IGpuDevice.hpp
Source/AnEngine/OutputTarget/Window/: WinMain.cpp
Source/AnEngine/PlatformDependence/Windows/DirectX/: CMakeLists.txt  CommandQueue.h  DirectX12.h  DirectX12Factory.cpp  DirectX12Factory.h  PlatformCommandList.cpp  PlatformCommandList.h  Utility.hpp
Source/AnEngine/PlatformDependence/Windows/Obsolate/: DX.cpp  ParticleDraw.hlsl
Source/AnEngine/Rendering/: CommandList.cpp  CommandList.h  CreateGpuSystem.h  Platform.h  RenderingFactory.h  SwapChain.h
Source/OutputTarget/: CMakeLists.txt
Source/OutputTarget/Window/: CMakeLists.txt  Test.cpp  Test.h  WinMain.cpp
Source/PlatformDependence/Windows/DirectX/: CMakeLists.txt  DirectX12.cpp  DirectX12.h
Source/Window/: WinMain.cpp  Window.vcxproj  Window.vcxproj.filters
Utility/: DMath.h  DMath.hpp  Hash.h  ThreadPool.cpp  ThreadPool.h  ThreadPool.hpp  Utility.vcxproj  Utility.vcxproj.filters  onwind.h
Window/: 1524239207_log.txt  Test.cpp  Test.h  TestScene.h  WinMain.cpp  Window.vcxproj  Window.vcxproj.filters  onwind.h
